# MCP-Lock

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  ROADMAP.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/broker/: Cargo.toml
crates/broker/src/: aggregator.rs  clock.rs  control_handler.rs  handler.rs  lib.rs  main.rs  mcp_client.rs
crates/broker/tests/: real_child.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: audit.rs  auth.rs  broker.rs  elevation.rs  error.rs  exec.rs  lib.rs  manifest.rs  policy.rs
crates/core/src/platform/: macos.rs  mod.rs
crates/core/tests/: fail_closed.rs
crates/mail/: Cargo.toml
crates/mail/src/: config.rs  fake.rs  imap_backend.rs  jsonrpc.rs  lib.rs  mailstore.rs  main.rs  server.rs  tools.rs
crates/mail/tests/: protocol.rs
crates/transport/: Cargo.toml
crates/transport/src/: control.rs  endpoint.rs  lib.rs
crates/transport/tests/: http.rs
docs/: DESIGN.md  prompts.md
examples/: manifest.example.json
scripts/: local-smoke.sh
