[package]
name = "mcp-lock"
description = "MCP-Lock control CLI: observe and lifecycle over the control channel. Scaffolding in Slice 0; commands land in Slice 4."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

# The CLI's subcommands are few and simple, so they are parsed by hand rather
# than pulling in an argument-parser dependency. The control-channel protocol and
# client live in the transport crate.
[dependencies]
mcp-lock-transport = { path = "../transport" }
