[package]
name = "mcp-lock-core"
description = "MCP-Lock core: platform-abstraction trait seams and the child execution-context seam. No transport, no async, no platform code beyond stubs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

# The security core is kept dependency-light and auditable. Every dependency
# here is justified:
# - serde/serde_json: parse the operator manifest (JSON). Hand-rolling a parser
#   for a security-critical config file would be more risk, not less.
# - sha2: integrity hash of the manifest at load (RustCrypto; widely audited).
#   The hash is a tamper-detection aid that is logged; file ownership remains the
#   real boundary.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
