[package]
name = "mcp-lock-transport"
description = "MCP-Lock transport seams: the control channel and the MCP endpoint, kept separate from the security core so async/TLS/IO complexity stays at the edges."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

# Dependency-free in Slice 0. Async runtimes, TLS, and JSON-RPC framing crates
# arrive with the slices that need them (endpoint in Slice 3, control channel in
# Slice 5), each justified in its PR.
[dependencies]
