[package]
name = "mcp-lock-transport"
description = "MCP-Lock transport seams: the control channel and the MCP endpoint, kept separate from the security core so async/TLS/IO complexity stays at the edges."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mcp-lock-core = { path = "../core" }
# Synchronous, thread-per-connection HTTP server for the MCP endpoint. Chosen
# over an async stack (tokio/hyper/axum) to keep the broker fully synchronous —
# the security core is sync and there is no high-concurrency requirement for a
# local single-user broker. Small, permissive dep tree (ascii, chunked_transfer,
# httpdate, log); no TLS (loopback only in v1; remote mTLS is a documented
# follow-up) and no async runtime.
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
